Jack: option to strip PC events for exclusive ports
and make specified channels for exclusive ports remanent
(they were overwritten when channels settings dialog was opened)